Added DeviceServicesAdapter class with it's layout item_device_service.xml. Added an initial code for when the log button is clicked in the DeviceDetailActivity.kt and the RecyclerView for the services of that device.

--- a/app/src/main/res/layout/activity_device_detail.xml
+++ b/app/src/main/res/layout/activity_device_detail.xml
@@ -22,7 +22,7 @@
         android:id="@+id/ddDeviceAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="00:11:22:33:44:55"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ddDeviceName" />
 
@@ -31,12 +31,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="TextView"
+        android:text="RSSI: -?? dBm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ddDeviceAddress" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/ddLogButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -44,4 +44,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/ddTvServices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Services"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ddRssi" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ddRvServices"
+        android:layout_width="409dp"
+        android:layout_height="547dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/ddLogButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ddTvServices"
+        android:padding="10dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
