--- a/app/src/main/res/layout/item_device_service.xml
+++ b/app/src/main/res/layout/item_device_service.xml
@@ -2,35 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/itemDeviceServiceName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Service Name"
+        android:textStyle="bold"
         android:textSize="16sp"
         android:layout_gravity="left"/>
 
-    <Button
-        android:id="@+id/btnRead"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Read"
-        android:layout_gravity="right"/>
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnWrite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Write"
-        android:layout_gravity="right"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="UUID: "
+            android:textStyle="bold"
+            android:textSize="14sp"/>
 
-    <Button
-        android:id="@+id/btnNotify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Notify"
-        android:layout_gravity="right" />
+        <TextView
+            android:id="@+id/itemDeviceServiceUuid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Service UUID"
+            android:textSize="14sp"/>
+
+    </LinearLayout>
+
+        <TextView
+            android:id="@+id/itemDeviceServiceType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Type Badge"
+            android:textStyle="bold"
+            android:textSize="14sp"/>
+
 
 </LinearLayout>
