--- a/app/src/main/res/layout/activity_device_detail.xml
+++ b/app/src/main/res/layout/activity_device_detail.xml
@@ -56,8 +56,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ddRvServices"
-        android:layout_width="409dp"
-        android:layout_height="547dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/ddLogButton"
         app:layout_constraintEnd_toEndOf="parent"
